[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/img/point_outilne.png" type="Texture" id=1]
[ext_resource path="res://points/point.gd" type="Script" id=2]
[ext_resource path="res://assets/img/star_ended.png" type="Texture" id=3]
[ext_resource path="res://assets/audio/sound_get.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/sound_spawn.wav" type="AudioStream" id=5]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.17037, 0.511111, 0.8, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.884058, 1, 1, 1, 1, 1, 1, 1, 0.848485, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 68.97
initial_velocity_random = 0.5
angular_velocity = 455.17
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
scale = 0.1
scale_random = 0.15
color_ramp = SubResource( 2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 0.4, 10 )

[sub_resource type="CircleShape2D" id=5]
radius = 9.85029

[node name="point" type="Node2D"]
script = ExtResource( 2 )

[node name="line" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 6.0
default_color = Color( 0.568627, 0.376471, 0.992157, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="getting_img" type="Sprite" parent="."]
modulate = Color( 0.4, 0.501961, 1, 0.309804 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 1 )

[node name="stars" type="Particles2D" parent="."]
modulate = Color( 0.784314, 1, 0.752941, 1 )
emitting = false
amount = 3
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 3 )

[node name="img" type="Sprite" parent="."]
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 1 )

[node name="area_ray" type="Area2D" parent="." groups=[
"connected_line",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_ray"]
position = Vector2( 0.00044, -0.000439644 )
rotation = -1.5708
shape = SubResource( 4 )
disabled = true
one_way_collision_margin = 0.0

[node name="area" type="Area2D" parent="." groups=[
"point",
]]

[node name="col" type="CollisionShape2D" parent="area"]
shape = SubResource( 5 )

[node name="timer_spawn" type="Timer" parent="."]
one_shot = true

[node name="timer_despawn" type="Timer" parent="."]

[node name="tween_spawn" type="Tween" parent="."]

[node name="tween_despawn" type="Tween" parent="."]

[node name="connected" type="Tween" parent="."]

[node name="tween_start_despawn" type="Tween" parent="."]

[node name="get_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -12.0

[node name="spawn_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0
[connection signal="mouse_entered" from="area" to="." method="_on_area_mouse_entered"]
[connection signal="timeout" from="timer_spawn" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="timer_despawn" to="." method="_on_timer_despawn_timeout"]
[connection signal="tween_all_completed" from="tween_despawn" to="." method="_on_tween_despawn_tween_all_completed"]
